@@ -1,5 +1,7 @@
 Revision history for Perl extension XML::LibXSLT.
 
+    - Convert the following test scripts from Test.pm to Test::More :
+        - t/01basic.t
 1.73            Sun Oct  9 17:32:30 IST 2011
     - Possible fix for https://rt.cpan.org/Ticket/Display.html?id=71456 :
         - made the port reservation on t/14security.t for the non-existent
